Closed
Bug 282812
Opened 21 years ago
Closed 20 years ago
Combobox (select) dropdown menu in wrong position with closed toolbar
Categories
(Core Graveyard :: GFX: Gtk, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: MatsPalmgren_bugz, Assigned: roc)
References
Details
(Keywords: regression, testcase)
Attachments
(4 files, 1 obsolete file)
|
69 bytes,
text/html
|
Details | |
|
11.02 KB,
image/png
|
Details | |
|
14.89 KB,
image/png
|
Details | |
|
5.51 KB,
patch
|
blizzard
:
review+
blizzard
:
superreview+
asa
:
approval1.8b3+
|
Details | Diff | Splinter Review |
Combobox (select) dropdown menu in wrong position with closed toolbar.
STEPS TO REPRODUCE:
1. load attached testcase
2. click on the "grip" in the toolbar containing Back/Forward buttons etc.
so that it is collapsed (see screenshot).
3. click on the combobox
ACTUAL RESULTS:
see screenshot.
(After resizing the window it is positioned correctly again.)
PLATFORMS and BUILDS TESTED:
Bug occurs in 2005-02-17-12 trunk Linux (GTK1)
Bug occurs in Mozilla 1.8a5 Linux (GTK1)
Bug does NOT occur in Mozilla 1.8a4 Linux (GTK1)
Bug does NOT occur in any GTK2 build that I tested.
| Reporter | ||
Comment 1•21 years ago
|
||
| Reporter | ||
Comment 2•21 years ago
|
||
| Reporter | ||
Comment 3•21 years ago
|
||
| Reporter | ||
Comment 4•21 years ago
|
||
Regression window: 2004-10-06-05 -- 2004-10-16-06
One of these seems most likely:
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=mozilla%2Fview&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2004-10-06&maxdate=2004-10-17&cvsroot=%2Fcvsroot
Comment 5•21 years ago
|
||
In fact, this regressed between 2004-10-11-08 and 2004-10-12-07. Almost
certainly fallout from bug 238493.
Comment 6•21 years ago
|
||
If I don't cache screen positions in GTK1's nsWindow, the bug goes away.
I poked at this for a bit, and I can't tell why that's going on. The only time
I see us hitting the cached values for a popup widget is when we're checking
whether the click was inside the combobox's list. The code in Move() that's
conditioned on |mParent && mWindowType == eWindowType_popup| is not hit, of
course (since the popup has no mParent).
So I'm really somewhat at a loss as to how the position cache screws us up
here... Robert, any idea?
Comment 7•21 years ago
|
||
Requesting blocking. This is making bugzilla pretty painful to use, actually...
Flags: blocking1.8b2?
| Assignee | ||
Comment 8•21 years ago
|
||
In a nutshell, the problem is that widgets in the content window aren't hooked
up to the widget tree, so we never invalidate the position cache of the content
window widgets when the outer window moves.
| Assignee | ||
Comment 9•21 years ago
|
||
This is pretty grotesque, but it works. We basically remember the non-hooked-up
relationship and use it as an extra path to invalidate the cached position.
| Assignee | ||
Updated•21 years ago
|
Attachment #178437 -
Flags: superreview?(blizzard)
Attachment #178437 -
Flags: review?(blizzard)
Comment 10•21 years ago
|
||
*** Bug 287993 has been marked as a duplicate of this bug. ***
Comment 11•21 years ago
|
||
Comment on attachment 178437 [details] [diff] [review]
fix
this patch doesn't fix the bug for me
Updated•21 years ago
|
Flags: blocking1.8b3?
Flags: blocking1.8b2?
Flags: blocking1.8b2-
| Assignee | ||
Comment 12•20 years ago
|
||
You're right. That one didn't work and I'm not sure why I thought it did.
Perhaps something changed between when I first tested it and when you tested
it.
This one works on today's trunk and it's probably a better approach anyway.
Assignee: blizzard → roc
Attachment #178437 -
Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #186274 -
Flags: superreview?(blizzard)
Attachment #186274 -
Flags: review?(blizzard)
| Assignee | ||
Updated•20 years ago
|
Attachment #178437 -
Flags: superreview?(blizzard)
Attachment #178437 -
Flags: review?(blizzard)
Comment 13•20 years ago
|
||
Comment on attachment 186274 [details] [diff] [review]
fix
This feels pretty hackish to me, but I'll bet it will work.
Did you test this with child plugin windows?
Attachment #186274 -
Flags: superreview?(blizzard)
Attachment #186274 -
Flags: superreview+
Attachment #186274 -
Flags: review?(blizzard)
Attachment #186274 -
Flags: review+
| Assignee | ||
Comment 14•20 years ago
|
||
Seems to be OK with the null plugin.
| Assignee | ||
Comment 15•20 years ago
|
||
Comment on attachment 186274 [details] [diff] [review]
fix
GTK1 fix
Attachment #186274 -
Flags: approval1.8b3?
Updated•20 years ago
|
Attachment #186274 -
Flags: approval1.8b3? → approval1.8b3+
| Assignee | ||
Comment 16•20 years ago
|
||
checked in
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Updated•20 years ago
|
Flags: blocking1.8b3?
Updated•17 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•