Bug 282812. Fix GTK1 popup widget positioning by invalidating the cached positions of all child widgets, even those that aren't directly connected in the nsIWidget hierarchy. r+sr=blizzard,a=asa